# mabel

./: .gitignore  Cargo.toml  README.md  justfile
examples/: faye.eno  heart.eno  source.eno  void.eno
mabel/: Cargo.toml
mabel-aseprite/: Cargo.toml
mabel-aseprite/src/: cel.rs  lib.rs  pixel.rs
mabel-eno/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
mabel-eno/examples/: lookup.rs  parse.rs  print.rs
mabel-eno/src/: elements.rs  error.rs  lib.rs  locale.rs  lookup.rs  parser.rs  prelude.rs  printer.rs  queries.rs  tests.rs
mabel-eno/src/elements/: attribute.rs  comment.rs  document.rs  element.rs  embed.rs  field.rs  flag.rs  item.rs  section.rs
mabel-eno/src/printer/: html.rs  terminal.rs  text.rs
mabel-eno/src/queries/: attribute_query.rs  embed_query.rs  field_query.rs  flag_query.rs  section_query.rs
mabel-eno/src/tests/: api.rs  fixes.rs  locale.rs  parsing_errors.rs  queries.rs  snippet.rs  touching.rs
mabel-eno/src/tests/fixes/: missing_linebreaks.rs  unicode_char_len.rs
mabel/src/: aseprite.rs  lib.rs  main.rs
