[package]
name = "mabel-aseprite"
description = "Utilities for loading Aseprite files."
version = "0.3.9"
authors = ["alpine-alpaca <alpine.alpaca.games@gmail.com>", "fawn <fawn@rinici.de>"]
edition = "2021"
license = "MIT"
repository = "https://codeberg.org/fawn/mabel"

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]

[features]
default = []
utils = []

[dependencies]
bitflags = "2"
byteorder = "1.3"
flate2 = "1.0"
image = { version = "0.24", default-features = false }
log = "0.4"
nohash = "0.2"

[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
rand = ">=0.7, <0.9"
rect_packer = "0.2"
