[package]
name = "mabel"
description = "declarative pixel art"
authors = ["fawn <fawn@rinici.de>"]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://codeberg.org/fawn/mabel"


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-art = { version = "0.3.8", default-features = false }
mabel-eno = { version = "0.4.4", path = "../mabel-eno" }
mabel-aseprite = { version = "0.3.9", path = "../mabel-aseprite", optional = true}
png = "0.17.13"

[features]
default = ["aseprite"]
aseprite = ["dep:mabel-aseprite"]
